# so_long

./: .gitignore  CMakeLists.txt  Makefile  draw_map.c  draw_map_bonus.c  get_next_line.c  get_next_line.h  key_handle.c  key_handle_bonus.c  main.c  main_bonus.c  map_check.c  map_check_bonus.c  map_load.c  map_load_bonus.c  set_sprite_bonus.c  so_long  so_long_bonus  solong.h  window.c  window_bonus.c
assets/: 1.xpm  c.xpm  e.xpm  p.xpm  p_a1.xpm  p_a2.xpm  p_a3.xpm  p_d1.xpm  p_d2.xpm  p_d3.xpm  p_s1.xpm  p_s2.xpm  p_s3.xpm  p_w1.xpm  p_w2.xpm  p_w3.xpm  tile0_0.xpm  tile0_y.xpm  tilen_0.xpm  tilen_n.xpm  tilen_y.xpm  tilex_0.xpm  tilex_n.xpm  tilex_y.xpm  x1.xpm  x2.xpm
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
header/: key.h  key_bonus.h  map.h  map_bonus.h  solong.h  solong_bonus.h  window.h  window_bonus.h
libft/: Makefile  ft_lstadd_back_bonus.c  ft_lstclear_bonus.c  ft_lstiter_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  libft.h
map/: compo_a.ber  test2_bonus.ber  test3_bonus.ber  test_bonus.ber
mlx/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
